Added dependency to run surefire with Junit5