@@ -79,6 +79,17 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <!--2.22.0 is required for Junit 5 tests-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
